--- a/css/app.css
+++ b/css/app.css
@@ -17,8 +17,12 @@ ul {
 input,
 textarea,
 select,
-button
-{
+button,
+input:focus,
+textarea:focus,
+select:focus,
+button:hover,
+button:focus {
   outline: none;
   border: none;
 }
@@ -243,7 +247,7 @@ body {
 /* nav start */
 #nav {
   width: 100%;
-  height: 44px;
+  height: 50px;
   background: #000611;
 }
 #nav .menu,
@@ -268,10 +272,10 @@ body {
   border-radius: 0;
 }
 #nav .menu img {
-  width: 33px;
+  width: 38px;
   height: auto;
   margin-top: 5px;
-  max-height: 35px;
+  max-height: 41px;
 }
 #nav .user {
   float: right;
@@ -279,8 +283,8 @@ body {
 #nav .menu li a,
 #nav .user > li > a {
   padding: 0 12px;
-  height: 44px;
-  line-height: 44px;
+  height: 50px;
+  line-height: 50px;
   margin-right: 12px;
   color: #fff;
 }
@@ -321,7 +325,7 @@ body {
 #nav .user > li input {
   width: 100%;
   height: 28px;
-  margin-top: 8px;
+  margin-top: 11px;
   padding: 0 5px;
   border-radius: 3px;
   background: #e7e7e7;
@@ -754,47 +758,6 @@ body {
 }
 /* repo create end */
 /* repo detail start */
-
-
-#repoDetail .table>tbody>tr>td, 
-#repoDetail .table>tbody>tr>th, 
-#repoDetail .table>tfoot>tr>td, 
-#repoDetail .table>tfoot>tr>th, 
-#repoDetail .table>thead>tr>td, 
-#repoDetail .table>thead>tr>th{
-  padding:8px 50px;
-}
-
-#repoDetail .header{
-  padding-top:8px;
-  padding-bottom:8px;
-}
-#repoDetail .fa-star{
-  cursor:pointer;
-}
-#repoDetail .header .repo-name{
-  font-size:15px;
-  color:#191919;
-}
-
-#repoDetail .header .repo-user{
-  color:#667a9c;
-  font-size:20px;
-  padding:6px 0;
-}
-
-#repoDetail .header .repo-status{
-  color:#878787;
-  font-size:14px;
-}
-
-
-#repoDetail .form-control:focus {
-  border-color: inherit;
-  outline: 0;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-}
 #repoDetail .header {
   padding-top: 8px;
   padding-bottom: 8px;
@@ -815,7 +778,6 @@ body {
   color: #878787;
   font-size: 14px;
 }
-
 #repoDetail .repo-nav {
   background-color: #CCCCCC;
 }
@@ -958,117 +920,97 @@ body {
 #buildHistory a {
   color: #3d76cc;
 }
-
-
-#buildTriggers{
-
+#buildTriggers .create-build {
+  display: inline-block;
 }
-
-#buildTriggers .create-build{
-  display:inline-block;
+#buildTriggers .create-build-div {
+  text-align: right;
+  padding-top: 30px;
 }
-#buildTriggers .create-build-div{
-  text-align:right;
-  padding-top:30px;
-}
-
-
-#buildTriggers .creat-dropdown-toggle
-{
-  background-color:#3da1e5;
-  color:#fff;
-  border:0;
-  position:relative;
-}
-
-#buildTriggers .setting{
+#buildTriggers .creat-dropdown-toggle {
+  background-color: #3da1e5;
+  color: #fff;
+  border: 0;
   position: relative;
-  display:inline-block;
 }
-
-#buildTriggers .setting>ul{
-  display:none;
+#buildTriggers .setting {
+  position: relative;
+  display: inline-block;
+}
+#buildTriggers .setting > ul {
+  display: none;
   position: absolute;
-  right:0;
+  right: 0;
 }
-#buildTriggers .fa-gear{
-  cursor:pointer;
+#buildTriggers .fa-gear {
+  cursor: pointer;
 }
-#buildTriggers .setting:hover>ul{
-  display:block;
+#buildTriggers .setting:hover > ul {
+  display: block;
 }
-#buildTriggers .setting:hover .fa-gear{
-  color:#3da1e5;
+#buildTriggers .setting:hover .fa-gear {
+  color: #3da1e5;
 }
-#buildTriggers .setting:hover>ul>li{
-  padding:5px 16px;
-  cursor:pointer;
+#buildTriggers .setting:hover > ul > li {
+  padding: 5px 16px;
+  cursor: pointer;
 }
-
-#buildTriggers .setting:hover>ul>li:hover{
-  background-color:#504e4e;
-  color:#fff;
+#buildTriggers .setting:hover > ul > li:hover {
+  background-color: #504e4e;
+  color: #fff;
 }
-
-#buildTriggers ul{
-  white-space:nowrap;
-  background-color:#dedede;
+#buildTriggers ul {
+  white-space: nowrap;
+  background-color: #dedede;
 }
-#buildTriggers ul li a{
-  padding:5px 12px;
+#buildTriggers ul li a {
+  padding: 5px 12px;
 }
-.create-repo-nav{
-  padding-right:20px;
+.create-repo-nav {
+  padding-right: 20px;
 }
-.create-repo-nav>span{
+.create-repo-nav > span {
   display: table-cell;
-  width:1%;
-  padding:12px 0;
-  text-align:center;
+  width: 1%;
+  padding: 12px 0;
+  text-align: center;
 }
-.create-repo-nav>span:first-child{
-  border-radius:4px 0 0 0;
+.create-repo-nav > span:first-child {
+  border-radius: 4px 0 0 0;
 }
-.create-repo-nav>span.active{
-  background-color:#565656;
-  color:#fff;
+.create-repo-nav > span.active {
+  background-color: #565656;
+  color: #fff;
 }
-.create-repo-modal .modal-header{
-  padding:0;
-  border-bottom:2px solid #565656;
+.create-repo-modal .modal-header {
+  padding: 0;
+  border-bottom: 2px solid #565656;
 }
-
-.info-circle{
-  color:#4c7fcd;
+.info-circle {
+  color: #4c7fcd;
 }
-
-#createRepoModal .step-div{
-  display:none;
+#createRepoModal .step-div {
+  display: none;
 }
-
-#createRepoModal .step-show{
-  display:block;
+#createRepoModal .step-show {
+  display: block;
 }
-
-
-#runTriggerModal .ssh-key{
-  border:1px solid #ccc;
-  border-radius:4px;
-  position:relative;
+#runTriggerModal .ssh-key {
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  position: relative;
 }
-#runTriggerModal .ssh-key input{
-  border-radius:4px;
-  padding:6px 12px;
-  width:100%;
+#runTriggerModal .ssh-key input {
+  border-radius: 4px;
+  padding: 6px 12px;
+  width: 100%;
 }
-#runTriggerModal .ssh-key .fa-clipboard{
-  position:absolute;
-  right:5px;
-  top:9px;
-  color:#9f9f9f;
+#runTriggerModal .ssh-key .fa-clipboard {
+  position: absolute;
+  right: 5px;
+  top: 9px;
+  color: #9f9f9f;
 }
-
-
 /* repo detail end */
 /* org list start */
 #orgList,
@@ -1739,8 +1681,8 @@ body {
   margin: 0 auto;
   position: fixed;
   top: 0;
-  height: 44px;
-  line-height: 44px;
+  height: 50px;
+  line-height: 50px;
 }
 #access .logo,
 #app .logo {
@@ -1749,7 +1691,7 @@ body {
   text-align: center;
   background: #fff;
   opacity: 0.75;
-  height: 44px;
+  height: 50px;
 }
 #access .menu,
 #app .menu {
@@ -1758,9 +1700,9 @@ body {
 }
 #access .logo img,
 #app .logo img {
-  width: 100px;
+  width: 115px;
   height: auto;
-  max-height: 36px;
+  max-height: 41px;
   margin-top: 5px;
 }
 #access .menu .space,
