--- a/templates/common/index.html
+++ b/templates/common/index.html
@@ -1,9 +1,12 @@
 <div class="container-fluid" id="app">
-  <div class="header">
+  <div class="banner">
     <img src="img/app_banner.jpg"/>
+    <input type="text" class="search-info"/>
   </div>
   <div class="navbar">
-    <div class="logo"><img src="img/opshub_03.png" /></div>
+    <div class="logo">
+      <img src="img/opshub_03.png" />
+    </div>
     <div class="menu">
       <a href="javascript:void(0)" class="space" (click)="changeNav('browse')">Browse</a>
       <a href="javascript:void(0)" class="space tutorial">Tutorial</a>
@@ -43,15 +46,18 @@
     <div class="row content-three">
       <div class="col-xs-12 col-md-10 col-md-offset-1">
         <div class="row">
-          <p class="col-xs-12 col-md-4 space">
-            <img src="###" />
-          </p>
-          <p class="col-xs-12 col-md-4 space">
-            <img src="###" />
-          </p>
-          <p class="col-xs-12 col-md-4 space">
-            <img src="###" />
-          </p>
+          <div class="col-xs-12 col-md-4 space">
+            <img src="img/opshub.png" />
+            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam vel ullam ea! Mollitia, blanditiis. Animi velit laborum ab repellendus esse labore porro iste quibusdam eligendi vel minus, provident distinctio blanditiis.</p>
+          </div>
+          <div class="col-xs-12 col-md-4 space">
+            <img src="img/opshub.png" />
+            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam vel ullam ea! Mollitia, blanditiis. Animi velit laborum ab repellendus esse labore porro iste quibusdam eligendi vel minus, provident distinctio blanditiis.</p>
+          </div>
+          <div class="col-xs-12 col-md-4 space">
+            <img src="img/opshub.png" />
+            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam vel ullam ea! Mollitia, blanditiis. Animi velit laborum ab repellendus esse labore porro iste quibusdam eligendi vel minus, provident distinctio blanditiis.</p>
+          </div>
         </div>     
       </div>
     </div>
