--- a/less/app.less
+++ b/less/app.less
@@ -171,6 +171,7 @@ body {
 	font-size: @baseSize;
 	// background: @bodyGray;
 	color: @black;
+	font-family: 'Ubuntu Mono';
 	// font-family: Microsoft YaHei;
 }
 
@@ -272,6 +273,7 @@ body {
 	padding: 60px 0 120px;
 	background: linear-gradient(0, #28529d, #127bd3);
 	background: -webkit-linear-gradient(0, #28529d, #127bd3);
+	color: @bodyGray;
 }
 
 .content-three .space {
@@ -2027,6 +2029,11 @@ body {
 	top: 0;
 	height: 50px;
 	line-height: 50px;
+}
+
+#access .navbar,
+#app .navbar {
+	border: none;
 }
 
 #access .logo, #app .logo {
