add google fonts

--- a/less/app.less
+++ b/less/app.less
@@ -169,10 +169,8 @@ html {
 
 body {
 	font-size: @baseSize;
-	// background: @bodyGray;
 	color: @black;
-	font-family: 'Ubuntu Mono';
-	// font-family: Microsoft YaHei;
+	font-family: 'Ubuntu Mono', monospace;
 }
 
 #repoContent {
@@ -271,8 +269,8 @@ body {
 
 .content-three {
 	padding: 60px 0 120px;
-	background: linear-gradient(0, #28529d, #127bd3);
-	background: -webkit-linear-gradient(0, #28529d, #127bd3);
+	background: linear-gradient(0, #28529d, #1d66b8, #127bd3);
+	background: -webkit-linear-gradient(0, #28529d, #1d66b8, #127bd3);
 	color: @bodyGray;
 }
 
