--- a/css/app.css
+++ b/css/app.css
@@ -139,7 +139,7 @@ html {
 body {
   font-size: 1.4rem;
   color: #191919;
-  font-family: 'Ubuntu Mono';
+  font-family: 'Ubuntu Mono', monospace;
 }
 #repoContent {
   background: #DEDEDE;
@@ -221,8 +221,8 @@ body {
 }
 .content-three {
   padding: 60px 0 120px;
-  background: linear-gradient(0, #28529d, #127bd3);
-  background: -webkit-linear-gradient(0, #28529d, #127bd3);
+  background: linear-gradient(0, #28529d, #1d66b8, #127bd3);
+  background: -webkit-linear-gradient(0, #28529d, #1d66b8, #127bd3);
   color: #EEEEEE;
 }
 .content-three .space {
