modify base fonts

--- a/less/app.less
+++ b/less/app.less
@@ -317,7 +317,7 @@ body {
 }
 
 #nav .menu a, #nav .user a {
-	font-size: @baseSize;
+	font-size: @smallSize;
 }
  
 #createRepo a:hover, 
@@ -2059,7 +2059,7 @@ body {
 	width: 15%;
 	background: @headerWhite;
 	opacity: 0.75;
-	font-size: @baseSize;
+	font-size: @smallSize;
 	float: left;
 	text-align: center;
 }
