modify base font

--- a/css/app.css
+++ b/css/app.css
@@ -220,7 +220,7 @@ body {
   border: 1px solid #DFDFDF;
 }
 .content-three {
-  padding: 60px 0 120px;
+  padding: 60px 0 130px;
   background: linear-gradient(0, #28529d, #1d66b8, #127bd3);
   background: -webkit-linear-gradient(0, #28529d, #1d66b8, #127bd3);
   color: #EEEEEE;
@@ -288,10 +288,10 @@ body {
 }
 #nav .menu li a,
 #nav .user > li > a {
-  padding: 0 12px;
+  padding: 0 8px;
   height: 50px;
   line-height: 50px;
-  margin-right: 12px;
+  margin-right: 10px;
   color: #fff;
 }
 #nav .user > li > a {
@@ -318,7 +318,7 @@ body {
 }
 #nav .user > li > a {
   display: inline-block;
-  padding: 0 12px;
+  padding: 0 3px;
 }
 #nav .user > li {
   height: 44px;
@@ -344,14 +344,14 @@ body {
   background: #fff;
 }
 #nav .user li:first-child {
-  margin-right: 12px;
+  margin-right: 6px;
 }
 #createRepo,
 #userSetting {
-  width: 200px;
+  width: 250px;
   background: #C0C0C0;
   position: absolute;
-  top: 44px;
+  top: 49px;
   right: 0px;
   z-index: 10000;
   display: none;
@@ -376,13 +376,19 @@ body {
   #nav .user {
     float: right;
   }
+  #nav .menu {
+    width: 65%;
+  }
+  #nav .menu-rt {
+    width: 35%;
+  }
 }
 @media screen and (max-width: 700px) {
   #nav .menu-rt {
-    width: 40%;
+    width: 32%;
   }
   #nav .menu {
-    width: 60%;
+    width: 68%;
   }
   #nav .menu .logo a {
     margin-right: 15px;
@@ -392,6 +398,9 @@ body {
   #nav .user .create,
   #nav .user .add {
     display: none;
+  }
+  .content-three {
+    padding-bottom: 160px;
   }
 }
 @media screen and (max-width: 600px) {
@@ -425,7 +434,7 @@ body {
   }
 }
 #userSetting {
-  width: 120px;
+  width: 150px;
 }
 #createRepo li,
 #createRepo li a,
@@ -1254,7 +1263,7 @@ body {
 #createOrg .members .title .add {
   width: 20%;
   float: left;
-  padding: 10px 0;
+  padding: 12px 0 13px;
   text-align: center;
   background: #F77462;
   border-radius: 0 5px 5px 0;
