--- a/less/app.less
+++ b/less/app.less
@@ -268,7 +268,7 @@ body {
 }
 
 .content-three {
-	padding: 60px 0 120px;
+	padding: 60px 0 130px;
 	background: linear-gradient(0, #28529d, #1d66b8, #127bd3);
 	background: -webkit-linear-gradient(0, #28529d, #1d66b8, #127bd3);
 	color: @bodyGray;
@@ -343,10 +343,10 @@ body {
 }
 
 #nav .menu li a, #nav .user > li > a {
-	padding: 0 12px;
+	padding: 0 8px;
 	height: 50px;
 	line-height: 50px;
-	margin-right: @baseMargin+2px;
+	margin-right: @baseMargin;
 	color: @white;
 }
 
@@ -374,7 +374,7 @@ body {
 
 #nav .user > li > a {
 	display: inline-block;
-	padding: 0 12px;
+	padding: 0 3px;
 }
 
 #nav .user > li {
@@ -406,14 +406,14 @@ body {
 }
 
 #nav .user li:first-child {
-	margin-right: 12px;
+	margin-right: 6px;
 }
 
 #createRepo, #userSetting {
-	width: 200px;
+	width: 250px;
 	background: @createGray;
 	position: absolute;
-	top: 44px;
+	top: 49px;
 	right: 0px;
 	z-index: 10000;
 	display: none;
@@ -443,15 +443,23 @@ body {
 	#nav .user {
 		float: right;
 	}
+
+	#nav .menu {
+		width: 65%;
+	}
+
+	#nav .menu-rt {
+		width: 35%;
+	}
 }
 
 @media screen and (max-width: 700px) {
 	#nav .menu-rt {
-		width: 40%;
+		width: 32%;
 	}
 
 	#nav .menu {
-		width: 60%;
+		width: 68%;
 	}
 
 	#nav .menu .logo a {
@@ -462,6 +470,9 @@ body {
 @media screen and (max-width: 642px) {
 	#nav .user .create, #nav .user .add {
 		display: none;
+	}
+	.content-three {
+		padding-bottom: 160px;
 	}
 }
 
@@ -503,7 +514,7 @@ body {
 }
 
 #userSetting {
-	width: 120px;
+	width: 150px;
 }
 
 #createRepo li, 
@@ -1510,7 +1521,7 @@ body {
 #createOrg .members .title .add {
 	width: 20%;
 	float: left;
-	padding: 10px 0;
+	padding: 12px 0 13px;
 	text-align: center;
 	background: @repoOrange;
 	border-radius: 0 5px 5px 0;
