--- a/less/app.less
+++ b/less/app.less
@@ -351,7 +351,7 @@ body {
 }
 
 #nav .user > li > a {
-	padding: 0 5px;
+	padding: 0 6px;
 }
 
 #nav .menu .logo, #nav .menu .logo:hover, #nav .menu .logo:active {
@@ -374,7 +374,7 @@ body {
 
 #nav .user > li > a {
 	display: inline-block;
-	padding: 0 3px;
+	padding: 0 6px;
 }
 
 #nav .user > li {
@@ -413,7 +413,7 @@ body {
 	width: 250px;
 	background: @createGray;
 	position: absolute;
-	top: 49px;
+	top: 50px;
 	right: 0px;
 	z-index: 10000;
 	display: none;
@@ -455,11 +455,15 @@ body {
 
 @media screen and (max-width: 700px) {
 	#nav .menu-rt {
-		width: 32%;
+		width: 25%;
+	}
+
+	#nav .menu-rt .add {
+		display: none;
 	}
 
 	#nav .menu {
-		width: 68%;
+		width: 75%;
 	}
 
 	#nav .menu .logo a {
@@ -485,10 +489,6 @@ body {
 		width: 80%;
 	}
 
-	#nav .user > li > a {
-		padding: 0 3px;
-	}
-
 	#nav .menu .logo a {
 		margin-right: 10px;
 	}
@@ -499,13 +499,13 @@ body {
 	}
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 485px) {
 	#nav .menu {
-		width: 77%;
+		width: 100%;
 	}
 
 	#nav .menu-rt {
-		width: 23%;
+		display: none;
 	}
 
 	#nav .menu li a {
