--- a/less/color.less
+++ b/less/color.less
@@ -7,6 +7,8 @@
 @browseWhite: #F3F3F3; //243 243 243
 @userFormWhite: #F7F7F7; // 247 247 247
 @userEmailWhite: #F2F2F2; // 242 242 242
+@triggerWhite: #f1f1f1;
+
 
 
 @brownness: #c9caaa;
@@ -38,6 +40,9 @@
 @userNavGray: #CCCCCC; // 204 204 204
 @teamGray: #687C8A; // 104 124 138
 @createGray: #C0C0C0; // 192 192 192
+@modifyGray: #878787;
+@triggerNavGray: #565656;
+@triggerDropGray: #9f9f9f;
 
 
 
@@ -52,6 +57,8 @@
 @userNavBlue: #2C374B; // 44 55 75
 @teamFontBlue: #15527B; // 21 82 123
 @teamTitleBlue: #5D798C; // 93 121 140
+@repoNamelBlue: #073b77;
+
 
 
 
@@ -59,6 +66,7 @@
 @orange: #F77462;
 @repoOrange: #F77462; // 247 116 98
 @starOrange: #E92C1A; // 233 44 26
+@repoDelOrange: #c39287;
 
 @yellow: #F1B90D; // 241 185 13
 
